--- a/style.css
+++ b/style.css
@@ -11,13 +11,31 @@ body {
     font-size: 16px;
     font-weight: 400, 700;
     background-color: var(--light-gray);
+    width: 50rem;
+    height: 50rem;
+}
+
+@media Only screen and (min-width: 62.5rem) {
+    body {
+        margin: 0 auto;
+    }
+    .join-community {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, auto);
+    }
+    .community {
+        grid-column: 1 / 3;
+    }
 }
 .join-community {
-    padding: 1.2rem;
+    padding: 1.2rem 1.2rem 1.2rem 1.2rem;
+    border-radius: 0.30rem;
 }
 .community, .subscription, .whyus  {
     padding-top: 1.50rem;
     padding-left: 1.5rem;
+    padding-right: .50rem;
 }
 div h1 {
     margin-top: 0;
@@ -39,7 +57,7 @@ div h1 {
     color: var(--grayish-blue);
 }
 .subscription {
-    background-color: var(--cyan);
+    background-color: var(--dark-cyan);
     padding-bottom: 1.2rem;
 }
 .subscription-text {
@@ -77,14 +95,28 @@ div h1 {
     width: 17rem;
     margin-bottom: 1rem;
     padding: 1.5rem;
+    box-shadow: 0px 9px 15px 1px rgba(0, 0, 0, 0.35);
     border-radius: 0.30rem;
+    cursor: pointer;
 }
 .whyus { 
-    
-    background-color: var(--grayish-blue);
+    background-color: var(--cyan);
+    padding-bottom: 1rem;
+}
+.whyus-text, .whyus-h1 {
+    color: var(--light-gray);
+}
+
+li {
+    opacity: 0.70;
+    list-style-type: none;
+}
+.attribution {
+    text-align: center;
 }
 :root {
     --cyan: hsl(179, 62%, 43%);
+    --dark-cyan: hsl(179, 60%, 39%);
     --bright-yellow: hsl(71, 73%, 54%);
     --light-gray: hsl(204, 43%, 93%);
     --grayish-blue: hsl(218, 22%, 67%);
